updates for 0.0.1 release

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: polylingual
 description: A new Flutter package project.
 version: 0.0.1
-author:
-homepage:
+author: Steve Rogers <srogers.uk@gmail.com>
+homepage: https://github.com/magnatronus/polylingual-package
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
